--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-Flask
-Jinja2
-Werkzeug
-itsdangerous
-click
-gunicorn
+Flask==3.0.0
+Jinja2==3.1.2
+Werkzeug==3.0.1
+itsdangerous==2.1.2
+click==8.1.7
+
+gunicorn==21.2.0
+
+streamlit==1.30.0
+pandas==2.1.1
+plotly==5.18.0
